--- a/gallary.html
+++ b/gallary.html
@@ -13,7 +13,7 @@
         <a href="about.html" class="abc">About</a>
         <a href="contact.html" class="abc">Contact</a>
         <hr>
-        <h1>Gallery</h1>
+        <h1 style="text-align: center;">Gallery</h1>
         <div class="row">
             <div class="column">
               <img src="nature0.jfif">
